@@ -2,18 +2,13 @@ package com.lowdragmc.lowdraglib2.editor.ui;
 
 import com.google.common.util.concurrent.Runnables;
 import com.lowdragmc.lowdraglib2.LDLib2;
-import com.lowdragmc.lowdraglib2.editor.keymap.EditorAction;
-import com.lowdragmc.lowdraglib2.editor.keymap.EditorActions;
-import com.lowdragmc.lowdraglib2.editor.keymap.EditorKeymapDispatcher;
-import com.lowdragmc.lowdraglib2.editor.keymap.KeyChord;
-import com.lowdragmc.lowdraglib2.editor.keymap.KeyContext;
-import com.lowdragmc.lowdraglib2.editor.keymap.Keymap;
-import com.lowdragmc.lowdraglib2.editor.keymap.KeymapCategories;
+import com.lowdragmc.lowdraglib2.editor.keymap.*;
 import com.lowdragmc.lowdraglib2.editor.project.IProject;
 import com.lowdragmc.lowdraglib2.editor.settings.AppearanceSettings;
 import com.lowdragmc.lowdraglib2.editor.settings.BehaviorSettings;
 import com.lowdragmc.lowdraglib2.editor.settings.EditorSettings;
 import com.lowdragmc.lowdraglib2.editor.settings.KeymapSettings;
+import com.lowdragmc.lowdraglib2.editor.ui.floating.FloatingViewManager;
 import com.lowdragmc.lowdraglib2.editor.ui.menu.FileMenu;
 import com.lowdragmc.lowdraglib2.editor.ui.menu.ViewMenu;
 import com.lowdragmc.lowdraglib2.editor.ui.view.HistoryView;
@@ -22,16 +17,13 @@ import com.lowdragmc.lowdraglib2.editor.ui.view.ResourceView;
 import com.lowdragmc.lowdraglib2.gui.ColorPattern;
 import com.lowdragmc.lowdraglib2.gui.texture.Icons;
 import com.lowdragmc.lowdraglib2.gui.texture.SpriteTexture;
+import com.lowdragmc.lowdraglib2.gui.ui.ModularUI;
+import com.lowdragmc.lowdraglib2.gui.ui.UIElement;
 import com.lowdragmc.lowdraglib2.gui.ui.data.Horizontal;
 import com.lowdragmc.lowdraglib2.gui.ui.data.TextWrap;
 import com.lowdragmc.lowdraglib2.gui.ui.data.Vertical;
-import com.lowdragmc.lowdraglib2.editor.ui.floating.FloatingViewManager;
-import net.neoforged.api.distmarker.Dist;
-import net.neoforged.api.distmarker.OnlyIn;
-import com.lowdragmc.lowdraglib2.gui.ui.ModularUI;
-import com.lowdragmc.lowdraglib2.gui.ui.elements.Dialog;
-import com.lowdragmc.lowdraglib2.gui.ui.UIElement;
 import com.lowdragmc.lowdraglib2.gui.ui.elements.Button;
+import com.lowdragmc.lowdraglib2.gui.ui.elements.Dialog;
 import com.lowdragmc.lowdraglib2.gui.ui.elements.Label;
 import com.lowdragmc.lowdraglib2.gui.ui.elements.Menu;
 import com.lowdragmc.lowdraglib2.gui.ui.event.CommandEvents;
@@ -47,19 +39,15 @@ import lombok.Getter;
 import net.minecraft.MethodsReturnNonnullByDefault;
 import net.minecraft.network.chat.Component;
 import net.minecraft.resources.ResourceLocation;
-import org.appliedenergistics.yoga.*;
+import net.minecraftforge.api.distmarker.Dist;
+import net.minecraftforge.api.distmarker.OnlyIn;
+import org.appliedenergistics.yoga.YogaEdge;
+import org.jetbrains.annotations.Nullable;
 import org.lwjgl.glfw.GLFW;
 
-import org.jetbrains.annotations.Nullable;
 import javax.annotation.ParametersAreNonnullByDefault;
 import java.io.File;
-import java.util.ArrayList;
-import java.util.ArrayDeque;
-import java.util.HashMap;
-import java.util.LinkedHashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Deque;
+import java.util.*;
 import java.util.function.Consumer;
 import java.util.function.Supplier;
 import java.util.stream.Stream;
@@ -743,7 +731,7 @@ public abstract class Editor extends UIElement implements EditorHost {
         bottomWindow = resolveVisibleAnchor(anchorRegistry, ANCHOR_BOTTOM);
 
         // Place views into saved slots.
-        var placed = new java.util.HashSet<View>();
+        var placed = new HashSet<View>();
         for (var slot : layout.slots()) {
             var window = navigatePath(rootWindow, slot.path());
             if (window == null) continue;
@@ -1083,7 +1071,7 @@ public abstract class Editor extends UIElement implements EditorHost {
                     .setOverflowVisible(false)
                     .layout(layout -> layout.flex(1)));
             dialog.show(this.getModularUI());
-            if (dialog.buttonContainer.getChildren().getFirst() instanceof Button button) {
+            if (dialog.buttonContainer.getChildren().get(0) instanceof Button button) {
                 button.setText("ldlib.gui.editor.menu.save");
             }
             return;
